# system_payment

./: .gitignore  .vercelignore  DEPLOYMENT.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  VERCEL_DEPLOY.md  docker-compose.prod.yml  docker-compose.yml  vercel.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  dashboard.py  descontos.py  funcionarios.py  itens_consumo.py  pagamentos.py  presencas.py  relatorios.py  semanas.py  usuarios.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  desconto.py  empresa.py  funcionario.py  item_consumo.py  pagamento.py  presenca.py  semana.py  usuario.py
backend/app/schemas/: auth.py
backend/scripts/: init-db.sql  test.sh
frontend/: .env.example  .env.production.example  Dockerfile  README.md  jest.setup.js  next.config.ts  package-lock.json  package.json  vitest.config.js
frontend/app/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/pagamentos/: page.tsx
frontend/app/semanas/: page.tsx
frontend/scripts/: lint.sh  test.sh
frontend/src/: middleware.ts
frontend/src/__tests__/: auth.test.tsx
frontend/src/app/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/funcionarios/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/types/: index.ts
